--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "resume-cv-design-n19-master",
+  "name": "resume",
   "version": "1.0.0",
-  "description": "How to create the Resume/CV Design using HTML and CSS",
+  "description": "resume of Rytis Razmus",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
